--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: rgb(80, 28, 148);
 }
 a:hover {
     text-decoration: underline;
@@ -26,10 +26,10 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    color: rgb(31, 155, 0);
 }
 footer {
-    border-top: 1px solid #d5d5d5;
+    border-top: 1px solid #eff300;
     font-size: .8em;
 }
 
