--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: rgb(80, 28, 148);
+    color: rgb(16, 71, 143);
 }
 a:hover {
     text-decoration: underline;
@@ -26,7 +26,7 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: rgb(31, 155, 0);
+    color: rgb(0, 0, 0);
 }
 footer {
     border-top: 1px solid #eff300;
@@ -40,4 +40,5 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
+    list-style-position: outside
 }
