--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
-body { background-color: lightskyblue
-    margin; 50px auto;
-     <width> 70%
+body {
+    margin: 50px auto;
+     width: 70%
 }
+body {background-color: lightseagreen}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
