--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ li a {
     text-decoration: none;
 }
 
-/* Change the link color to #253 (white) on hover */
+/* Change the link color to #,(0, 252, 55) (green) on hover */
 li a:hover {
-    background-color: rgb(253, 253, 253);
+    background-color: rgb(0, 252, 55);
 }
