--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,11 @@ body {
     margin: 50px auto;
      width: 70%
 }
-body #grad {
+#grad {
     background-image: linear-gradient(to bottom right, red, yellow);
-  } {background-color: lightseagreen}
+  }
+body
+   {background-color: lightseagreen}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
