--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
      width: 70%
 }
 #grad {
-    background-image: linear-gradient(red, yellow);
+    background-color: linear-gradient(red, yellow);
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
