--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@ body {
     margin: 50px auto;
      width: 70%
 }
-#grad {
+#grad
     background-image: linear-gradient(red, yellow);
-    
+
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
