--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,11 @@ body {
     margin: 50px auto;
      width: 70%
 }
-#grad
-    background-image: linear-gradient(red, yellow);
-
+#box1 {
+    width: 100%;
+    height: 100%;
+    float: left;
+    background: linear-gradient(blueviolet, blue)
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
