--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,10 @@ body {
      width: 70%
 }
 #box1 {
-    width: 100%;
-    height: 100%;
+    width: 800px;
+    height:600px%;
     float: left;
-    background: linear-gradient(blueviolet, blue)
+    background: linear-gradient(rgb(87, 1, 167), blue, rgb(10, 154, 202))
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
