--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 }
 #box1 {
     width: 800px;
-    height:600px%;
+    height:600px;
     float: left;
     background: linear-gradient(rgb(87, 1, 167), blue, rgb(10, 154, 202))
 }
