--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
      width: 70%
 }
 #box1 {
+    background-size: auto;
     background: linear-gradient(rgb(87, 1, 167), blue, rgb(10, 154, 202))
 }
 nav ul, footer ul {
