--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,8 @@ body {
 }
 #box1 {
     background-size: auto;
-    background: linear-gradient(rgb(87, 1, 167), blue, rgb(10, 154, 202))
+    background: linear-gradient(rgb(87, 1, 167), blue, rgb(10, 154, 202));
+    background
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -25,9 +26,9 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    text-decoration-color: darkblue
+    text-decoration-color: darkblue;
+    text-align: center;
 }
-h1 {text-align: center;}
 h3 {text-align: center;}
 p {
     font-size: 1.5em;
@@ -70,5 +71,5 @@ li a {
 
 /* Change the link color to #,(0, 252, 55) (green) on hover */
 li a:hover {
-    background-color: rgb(0, 252, 55);
+    background-color: rgb(8, 19, 121);
 }
