--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,9 @@ body {
      width: auto;
 }
 #box1 {
-    background-size: auto;
-    background: linear-gradient(rgb(87, 1, 167), blue, rgb(10, 154, 202));
-    
+    background: radial-gradient(rgb(87, 1, 167), rgb(14, 185, 43), rgb(202, 10, 138));
+    height: auto;
+    width: auto;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -28,6 +28,7 @@ h1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     text-decoration-color: darkblue;
     text-align: center;
+    padding-bottom: 50px
 }
 h3 {text-align: center;}
 p {
@@ -56,9 +57,18 @@ ul {
     overflow: hidden;
     background-color: #333;
 }
+}
+ul ul {
+    position: absolute;
+    display: none;
+}
 
 li {
     float: left;
+    position: relative;
+}
+ul a:hover {
+    display: block;
 }
 
 li a {
@@ -68,8 +78,52 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
 }
-
-/* Change the link color to #,(0, 252, 55) (green) on hover */
+<style>
 li a:hover {
-    background-color: rgb(8, 19, 121);
+    background-color: rgb(138, 0, 0);
 }
+dropbtn {
+    background-color: rgb(6, 23, 100);
+    color: rgb(73, 65, 65);
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: block;
+    position: relative;
+    background-color: #23cf00;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    position: relative;
+}
+
+.dropdown-content a:hover {background-color: rgb(196, 8, 8);}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+</style>
+
+<div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
