--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,8 @@ h1 {
     padding-bottom: 50px
 }
 h3 {text-align: center;}
+h2 {text-decoration-color: black;
+    font-family: Helvetica}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
